# nb

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  TECHNICAL-OVERVIEW.md  pyproject.toml  todo.md
docs/: Makefile  generate_examples.py  make.bat
docs/source/: best-practices.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/source/commands/: ai.rst  daemon.rst  git.rst  inbox.rst  management.rst  notes.rst  recording.rst  search.rst  todos.rst
docs/source/reference/: configuration.rst  note-format.rst  todo-syntax.rst
nb/: __init__.py  __main__.py  cli.py  config.py  daemon.py  models.py  web.py  webserver.py
nb/cli/: __init__.py  ai.py  assistant.py  attachments.py  clip.py  completion.py  config_cmd.py  daemon.py  export.py  git.py  graph.py  inbox.py  links.py  note_links.py  notebooks.py  notes.py  record.py  related.py  search.py  stats.py  tags.py  templates.py  todos.py  transcribe.py  utils.py  web.py
nb/cli/todos/: __init__.py  display.py  formatters.py  views.py
nb/config/: __init__.py  io.py  models.py  parsers.py  utils.py
nb/core/: __init__.py  aliases.py  attachments.py  calendar.py  clip.py  export.py  git.py  links.py  llm.py  note_links.py  note_parser.py  notebooks.py  notes.py  pinned.py  search.py  templates.py  todos.py  tree.py
nb/core/ai/: __init__.py  ask.py  ask_agentic.py  assistant.py  assistant_tools.py  backlog.py  planning.py  research.py  review.py  standup.py  summarize.py
nb/core/inbox/: __init__.py  raindrop.py  sync.py
nb/index/: __init__.py  attachments_repo.py  db.py  scanner.py  search.py  todos_repo.py
nb/recorder/: __init__.py  audio.py  formatter.py  meeting_notes.py  transcriber.py
nb/tui/: __init__.py  recording.py  review.py  search.py  stream.py  todos.py  wijjit_utils.py
nb/utils/: __init__.py  dates.py  editor.py  fuzzy.py  hashing.py  markdown.py  patterns.py
nb/web/: __init__.py
nb/web/static/: app.js  styles.css
nb/web/templates/: index.html
scripts/: capture_api_responses.py
tests/: __init__.py  conftest.py  test_ai_ask.py  test_ai_ask_agentic.py  test_assistant.py  test_attachments_repo.py  test_backlog.py  test_calendar.py  test_cli.py  test_cli_ai.py  test_cli_completion.py  test_cli_config.py  test_cli_links.py  test_cli_misc.py  test_cli_notebooks.py  test_cli_notes.py  test_cli_search.py  test_cli_templates.py  test_cli_todos.py  test_config.py  test_contract_embeddings.py  test_contract_llm.py  test_contract_search.py  test_core_notebooks.py  test_core_notes.py  test_core_templates.py  test_core_todos.py  test_git.py  test_inbox.py  test_index_db.py  test_index_scanner.py  test_llm.py  test_models.py  test_note_links.py  test_planning.py  test_recorder.py  test_summarize.py  test_tree.py  test_utils_dates.py  test_utils_fuzzy.py  (+3 more)
tests/fixtures/: anthropic_response.json  anthropic_streaming.jsonl  anthropic_tool_response.json  openai_response.json  openai_streaming.jsonl  serper_web_response.json
