[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nb*"]

[project]
name = "nb-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8", # fuzzy date parsing
    "python-frontmatter>=1.0", # yaml frontmatter
    "rich>=13.0", # pretty printing in CLI
    "localvectordb",
    "psutil>=7.1.3",
]
[project.scripts]
nb = "nb.cli:main"
nbt = "nb.cli:main_todo"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "types-pyyaml>=6.0.12.20250915",
    "types-python-dateutil>=2.9.0.20251115",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["nb"]
omit = ["nb/__pycache__/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.uv.sources]
localvectordb = { path = "wheels/localvectordb-1.0.0-py3-none-any.whl" }


[tool.ruff]
# Target Python version
target-version = "py312"
# Maximum line length (compatible with black)
line-length = 120

# Enable fixing issues automatically when possible
fix = true

# Relax rules for test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F841",
    "E741"
]
