[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nb"]

[tool.hatch.build.targets.sdist.force-include]
"docs/build/html" = "docs/build/html"

[tool.hatch.build.targets.wheel.force-include]
"docs/build/html" = "nb/_docs/"
"nb/web/static" = "nb/web/static"
"nb/web/templates" = "nb/web/templates"

[project]
name = "nb-cli"
version = "0.4.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8", # fuzzy date parsing
    "python-frontmatter>=1.0", # yaml frontmatter
    "rich>=13.0", # pretty printing in CLI
    "localvectordb",
    "psutil>=7.1.3",
    "httpx>=0.27.0", # web clipping
    "all2md[all]>=1.0.0",
    "pyperclip>=1.11.0",
    "wijjit",
    "gitpython>=3.1.0",  # Git integration for version control
    "python-dotenv>=1.0.0",  # Load API keys from .env file
]

[project.scripts]
nb = "nb.cli:main"
nbt = "nb.cli:main_todo"
nb-daemon = "nb.daemon:main"

[project.optional-dependencies]
recorder = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "deepgram-sdk>=3.0.0",
]
calendar = [
    "pywin32>=306; sys_platform == 'win32'",
]
daemon = [
    "watchdog>=4.0.0",
]
all = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=2.4.0",
    "deepgram-sdk>=3.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "watchdog>=4.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "types-pyyaml>=6.0.12.20250915",
    "types-python-dateutil>=2.9.0.20251115",
    "isort>=7.0.0",
    "types-pyperclip>=1.9.0.20250801"
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0"
]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "contract: tests requiring real API keys (run with pytest -m contract)",
    "vectorized: tests requiring vector indexing and embeddings API",
    "slow: slow-running tests",
]

[tool.coverage.run]
source = ["nb"]
omit = ["nb/__pycache__/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.uv.sources]
localvectordb = { path = "wheels/localvectordb-1.0.0-py3-none-any.whl" }
wijjit = { path = "wheels/wijjit-0.1.0a0-py3-none-any.whl" }


[tool.bumpversion]
current_version = "0.4.6"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "nb/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'


[tool.mypy]
python_version = "3.13"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "frontmatter",
    "sounddevice",
    "soundfile",
    "git",
    "git.*",
    "win32com",
    "win32com.*",
    "pywintypes",
    "all2md",
    "all2md.*",
    "watchdog",
    "watchdog.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
    "docs"
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in Click)
    "RUF005", # list concatenation (intentional for SQL params and readability)
]

[tool.ruff.lint.isort]
known-first-party = ["nb"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F841",   # unused variable (common in test fixtures)
    "E741",   # ambiguous variable name
    "B011",   # assert False
    "PTH123",
    "RUF059"
]
